build: downgrade project to java 17
- set `maven.compiler.release` to `17` and update `artifactId` to `nautilus-windows-x86` in `pom.xml`
- fix `WMIValueResolver.java` `switch` null handling for java `17` compatibility
- refactor `cpuTextAreas.getFirst()` to `cpuTextAreas.get(0)` in `WMIProcessorPanelWorker.java`

Signed-off-by: Egg-03 <111327101+eggy03@users.noreply.github.com>